new URI instead of new URL, E621.